--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -141,18 +141,18 @@
 }
 @media screen and (max-width: 800px) {
     .Footer {
-       font-size: 14px;
+       font-size: 13px;
     }
     .Container h3 {
         font-size: 16px;
     }
     .Contact {
-        font-size: 13px;
+        font-size: 12px;
     }
 }
 @media screen and (max-width: 600px) {
     .Footer {
-       font-size: 14px;
+       font-size: 12px;
     }
     .Container h3 {
         font-size: 16px;
@@ -165,6 +165,9 @@
         width: 80px;
         height: 2px;
         background: #f00;
+    }
+    .Contact {
+        font-size: 9px;
     }
 }
 @media screen and (max-width: 500px) {
