--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -149,6 +149,11 @@
     .Contact {
         font-size: 12px;
     }
+    .Links a {
+        background: rgb(40, 39, 39);
+        width: 40px;
+        height: 40px;  
+    }
 }
 @media screen and (max-width: 600px) {
     .Footer {
@@ -189,11 +194,17 @@
     .Contact {
         font-size: 7px;
     }
+    .Links a {
+        background: rgb(40, 39, 39);
+        width: 40px;
+        height: 30px; 
+        margin-bottom: 10px;
+    }
 }
 
 @media screen and (max-width: 400px) {
     .Footer {
-       font-size: 8px;
+       font-size: 7px;
     }
     .Container h3 {
         font-size: 10px;
